styles/main.css
/*
  o                                                                                           o__ __o                       o     o                             
 <|>                                                                                         <|     v\                    _<|>_  <|>                            
 / \                                                                                         / \     <\                          < >                            
 \o/           o       o       __o__    o__ __o/       o      o     o__ __o/  \o__ __o       \o/     o/       o       o     o     |        o__  __o   \o__ __o  
  |           <|>     <|>     />  \    /v     |       <|>    <|>   /v     |    |     |>       |__  _<|       <|>     <|>   <|>    o__/_   /v      |>   |     |> 
 / \          < >     < >   o/        />     / \      < >    < >  />     / \  / \   / \       |       \      < >     < >   / \    |      />      //   / \   / \ 
 \o/           |       |   <|         \      \o/       \o    o/   \      \o/  \o/   \o/      <o>       \o     |       |    \o/    |      \o    o/     \o/   \o/ 
  |            o       o    \\         o      |         v\  /v     o      |    |     |        |         v\    o       o     |     o       v\  /v __o   |     |  
 / \ _\o__/_   <\__ __/>     _\o__</   <\__  / \         <\/>      <\__  / \  / \   / \      / \         <\   <\__ __/>    / \    <\__     <\/> __/>  / \   / \ 
 */

/* COMPRESSION SETTINGS FOR IMAGES

PHOTOSHOP
    COMPRESSED: 1920 X 1080 (RESIZE TO FIT) (QUALITY 8)
    UNCOMPRESSED: 3840 X 2160 (RESIZE TO FIT) (QUALITY 10)
    FULL SIZE IS OBVIOUSLY JUST FULL SIZED IMAGES (COMPLETELY UNCOMPRESSED)

*/

body, html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    font-family: Roboto mono;
    font-weight: 400;
    text-rendering: optimizeLegibility;
}

html {
    background-color: white;
}

p {
    font-size: 14pt;
    margin: 0;
}

h1 {
    margin: 0;
}

#background-container {
    padding: 5px;
    width: 100vw;
    height: 100%;
    box-sizing: border-box;
    position: absolute;
    top: 0;
    animation-duration: 4s;
    animation-iteration-count: infinite;
    animation-timing-function: ease;
    animation-direction: alternate;
}

.parent {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(5, 1fr);
    gap: 10px;
}

.logo_box {
    margin: 0;
    width: 90%;
    height: 90%;
    position: absolute;
    background-size: contain;
    background-position: center;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 50%;
    background-size: 80%;
    background-image: url('../images/Rotatinglogo-ezgif.com-optimize.gif');
    animation: alternate 15s infinite ease-in-out hop_2;
    padding: 0;
}

#name_box{
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    padding: 20px;
    background-color: rgba(0, 0, 0, 0.2);
    border-radius: 0 0 15px 0;
    font-family: VT323;
}

#texture_layer {
    background-image: url('../images/texture_layer.jpg');
    position: absolute;
    background-position: center;
    width: 100vw;
    height: 100vh;
    mix-blend-mode:soft-light;
    animation: hop 30s infinite alternate;
    opacity: 0.8;
}

#container_grid {
    justify-items: center;
    display: grid;
    grid-template-columns: 1fr;
    align-items: center;
    background-color: #091035;
    padding: 40px;
    box-sizing: border-box;
    max-width: 100vw;
    height: 100vh;
}

#body_port {
    width: 100%;
    height: 100%;
    /* background-color: #6a03f2; */
}

.portfolio_grid {
    display: flex;
    box-sizing: border-box;
    gap: 10px;
    margin: 0 auto;
    max-width: 1000px;
}

.portfolio_grid > div {
    box-sizing: border-box;
    padding: 20px;
    max-width: 30vw;
}

.portfolio_grid > div > p {
    color: white;
}

.portfolio_grid  > div > img {
    transition: all .4s ease;
    width: 100%;
    display: block;
    margin: 0 auto;
    transform: scale(.9);
}

.portfolio_grid > div > img:hover {
    cursor: pointer;
    transform: scale(1);
}

#photo_page {
    background-color: rgb(255, 255, 255);
    width: 100%;
    height: 100%;
    display: none;
    top: 0;
    position: absolute;
    padding: 20px;
    box-sizing: border-box;
}

#back_btn:hover {
    background-color: rgb(0, 0, 0);
    cursor: pointer;
    color: white;
}

#photo_holder {
    height: 100%;
    width: 50%;
    padding: 20px;
    box-sizing: border-box;
}

#photo_holder > img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    max-width: 40vw;
    box-sizing: border-box;
}

#text_holder {
    --padding: 20px;
    padding: var(--padding);
    padding-top: calc(var(--padding) * 4);
    width: 50%;
}

#text_holder p {
    font-size: 24px;
    font-weight: bold;
}

#text_holder h1 {
    font-size: 40px;
    font-weight: bold;
    margin-top: 0;
}

    .div1:nth-child(1) { grid-area: 1 / 1 / 3 / 6; animation-delay: 0;}
    .div1:nth-child(2) { grid-area: 2 / 2 / 4 / 4; animation-delay: 1s; animation-direction: alternate-reverse;}
    .div1:nth-child(3) { grid-area: 3 / 3 / 5 / 6; animation-delay: 0.2s;}
    .div1:nth-child(4) { grid-area: 3 / 1 / 6 / 2; animation-delay: 0s; animation-direction: alternate-reverse;}
    .div1:nth-child(5) { grid-area: 4 / 2 / 6 / 4; animation-delay: 2.4s;}
    .div1:nth-child(6) { grid-area: 5 / 4 / 6 / 6; animation-delay: 0.5s;animation-direction: alternate-reverse;}

.content {
    position: absolute;
    z-index: 1;
    width: 100%;
    height: 100%;
}

#menu {
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
    padding: 20px;
    font-family: VT323;
}

.home_btn {
    height: 64px;
    float: left;
    box-sizing: border-box;
    transition: all .4s ease-in-out;
    padding: 0;
    border: 2px solid rgb(255, 255, 255);
    mix-blend-mode: exclusion;
}

.home_btn:hover {
    cursor: pointer;
    background-color: white;
}
/* ... */

